# gemini-tel-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Procfile  README.md  bot.py  config.py  custom_types.py  db.py  gemini_utils.py  handlers.py  helpers.py  processing.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: lint-black.yml  mypy.yml  uv-integration.yml
api/: webhook.py
src/gemini_tel_bot/: bot.py  cli.py  config.py  custom_types.py  db.py  gemini_utils.py  handlers.py  helpers.py  processing.py
src/gemini_tel_bot/api/: webhook.py
src/gemini_tel_bot/multi_tool_agent/: agent.py  tools.py
