[project]
name = "gemini-tel-bot"
version = "0.1.0"
description = "A versatile Telegram bot built with Python that allows users to chat with Google Gemini models."
authors = [
    {name = "Mohammad GhaffariFar", email = "mohammaddevgermany@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytelegrambotapi @ git+https://github.com/mohamadghaffari/pyTelegramBotAPI.git",
    "google-genai",
    "supabase",
    "gunicorn",
    "google-api-core",
    "telegramify-markdown[mermaid]",
    "google-adk",
]

[project.scripts]
run-gemini-bot = "gemini_tel_bot.cli:main"

[project.optional-dependencies]
dev = [
    "python-dotenv",
    "black",
    "mypy",
    "uv",
    "pre-commit"
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_executable = "./.venv/bin/python3"
python_version = "3.11"
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
backend-path = ["."]
